# spacebudz-identity

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml  off-chain.yml  on-chain.yml
docs/: README.md
offchain/: index.ts
onchain/: README.md  cabal.project
onchain/app/: Main.hs
src/offchain/: index.ts
src/onchain/: README.md  contract.cabal  scripts.json
src/onchain/app/contracts/: Contract.hs
