cabal-version: 3.0
name: contract
version: 0.1.0.0
author: BerryLabs

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common base
  build-depends: base ^>=4.14.3.0
  ghc-options:
      -threaded -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  if flag(defer-plugin-errors)
      ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common maybe-Win32
  if os(windows)
     build-depends: Win32

executable contract
    import: base, maybe-Win32
    main-is: Main.hs
    hs-source-dirs: app, app/contracts
    default-language: Haskell2010
    default-extensions: DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , FlexibleContexts
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , NoImplicitPrelude
                    , NamedFieldPuns
    build-depends: cardano-api
                 , plutus-ledger-api
                 , plutus-tx
                 , plutus-tx-plugin
                 , bytestring
                 , base16-bytestring
                 , plutus-ledger
                 , serialise
                 , aeson
                 , text
    other-modules: Contract